# Py3LearningProgram

./: Makefile  README.md  auto  driverT.c  driverTest.c  lcd.c  onebyte.c  onebyte4m.c  reinstall  test  test_ioctl  test_ioctl.c  write_5m.c
doc/: Setup WGVPN client App on Android phone .docx  TW_template.pptx  kafkaSteamCEP.docx
src/: CMakeLists.txt  CMakeLists_0.txt  ClosureInstance.py  Makefile  MethodCalling.py  README.md  StringInstance.py  SwitchWxPanel.py  passwordGen.py  resultRd.py  resultRd2.py  resultRd3.py  resultRd4.py  result_sep_2019_Hongwei.pickle  tutorial.py  urls.csv  webDownload.py  yamlTest.yaml
src/CTF_hardward/: readme.md
src/Files_for_visualization/: resultRd4.py
src/InterviewQuestion/: LinkedList.py  findPosition.py
src/October/: resultRd4_case.py  resultRd4_linked.py  resultRd4_sub.py
src/SpeedTest/: pickleBomb.py  pickleBombload.py  speedChecker.py  sshTest.py
src/cookBookExamples/: callName.py  flaskImg.py  statefulTest.py  visitorPattern.py  weakReftest.py
src/cookBookExamples/ImageProcess/: imageDect.py
src/cookBookExamples/templates/: index.html
src/heatmap/: heatmapTest.py
src/keyboardInput/: cmdtest.py  keyboardInput.py  mouseInput.py
src/knobSource/: knobdemo_amperes.py  knobdemo_psi.py  knobdemo_rpm.py  knobdemo_speedo.py  knobdemo_styles.py  knobdemo_thermometer.py  knobdemo_volts.py  knobdemo_volts_reverse.py  knobdemo_volume.py
src/pyFiletoDoc/: Readme.md
src/pyFiletoDoc/example/html/: udpCom.html
src/test/: bytes4m.c  countryCode.py  hello2.c  onebyte.c  swapCC.json  test.c
src/urlOpen/: run.bat  urlChecker.py
